adding scrolling and flatten to the cli wip

--- a/packages/cli/configuration/fern/definition/docs.yml
+++ b/packages/cli/configuration/fern/definition/docs.yml
@@ -392,6 +392,19 @@ types:
       icon: optional<string>
       hidden: optional<boolean>
       skip-slug: optional<boolean>
+      scrolling:
+        type: optional<ApiScrollingConfiguration>
+        docs: |
+          If `scrolling` is set to `infinite`, you will be able to scroll between endpoints. If set to `paginated`, each endpoint will be self-contained, and you will need to click the next endpoint to view it. If not specified, the default is `infinite`.
+      unwrapped:
+        type: optional<boolean>
+        docs: |
+          If `unwrapped` is set to true, every endpoint will be viewable in the side-panel. Else, every endpoint will be default collapsed within each service.
+      
+  ApiScrollingConfiguration:
+    enum:
+      - infinite
+      - paginated
 
   ApiNavigationItem:
     docs: |
