--- a/packages/cli/configuration/fern/generators.yml
+++ b/packages/cli/configuration/fern/generators.yml
@@ -3,23 +3,24 @@ groups:
   local:
     generators:
       - name: fernapi/fern-typescript-node-sdk
-        version: 0.8.13
+        version: 0.18.2
         output:
           location: local-file-system
           path: ../src/docs-yml/schemas/sdk
         config:
           outputSourceFiles: true
-          includeUtilsOnUnionMembers: false
+          includeUtilsOnUnionMembers: true
           noOptionalProperties: false
-  publish: 
-    generators:
-      - name: fernapi/fern-typescript-node-sdk
-        version: 0.8.13
-        output:
-          location: npm
-          url: npm.buildwithfern.com
-          package-name: "@fern-fern/docs-config"
-        config:
-          outputSourceFiles: true
-          includeUtilsOnUnionMembers: false
-          noOptionalProperties: false
+          useBrandedStringAliases: true
+  # publish:
+  #   generators:
+  #     - name: fernapi/fern-typescript-node-sdk
+  #       version: 0.8.13
+  #       output:
+  #         location: npm
+  #         url: npm.buildwithfern.com
+  #         package-name: "@fern-fern/docs-config"
+  #       config:
+  #         outputSourceFiles: true
+  #         includeUtilsOnUnionMembers: false
+  #         noOptionalProperties: false
