move to own package

--- a/packages/cli/generation/remote-generation/remote-workspace-runner/tsconfig.json
+++ b/packages/cli/generation/remote-generation/remote-workspace-runner/tsconfig.json
@@ -9,6 +9,7 @@
     { "path": "../../../../ir-sdk" },
     { "path": "../../../auth" },
     { "path": "../../../configuration" },
+    { "path": "../../../docs-resolver" },
     { "path": "../../../logger" },
     { "path": "../../../register" },
     { "path": "../../../task-context" },
