--- a/packages/cli/generation/remote-generation/remote-workspace-runner/package.json
+++ b/packages/cli/generation/remote-generation/remote-workspace-runner/package.json
@@ -31,6 +31,7 @@
     "@fern-api/configuration": "workspace:*",
     "@fern-api/core": "workspace:*",
     "@fern-api/core-utils": "workspace:*",
+    "@fern-api/docs-resolver": "workspace:*",
     "@fern-api/docs-validator": "workspace:*",
     "@fern-api/fdr-sdk": "0.94.3-b6c3996ce",
     "@fern-api/fs-utils": "workspace:*",
@@ -59,7 +60,6 @@
   },
   "devDependencies": {
     "@types/decompress": "^4.2.7",
-    "@types/diff": "^5.2.0",
     "@types/jest": "^29.0.3",
     "@types/lodash-es": "^4.17.9",
     "@types/mime-types": "^2.1.4",
@@ -67,7 +67,6 @@
     "@types/tar": "^6.1.11",
     "@types/terminal-link": "^1.2.0",
     "depcheck": "^1.4.6",
-    "diff": "^5.2.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "lodash-es": "^4.17.21",
