--- a/packages/cli/docs-preview/tsconfig.json
+++ b/packages/cli/docs-preview/tsconfig.json
@@ -6,6 +6,7 @@
     { "path": "../../commons/core-utils" },
     { "path": "../../commons/fs-utils" },
     { "path": "../configuration" },
+    { "path": "../docs-resolver" },
     { "path": "../generation/ir-generator" },
     { "path": "../register" },
     { "path": "../task-context" },
