--- a/packages/cli/docs-preview/package.json
+++ b/packages/cli/docs-preview/package.json
@@ -32,7 +32,7 @@
     "@fern-api/docs-resolver": "workspace:*",
     "@fern-api/fdr-sdk": "0.94.3-b6c3996ce",
     "@fern-api/fs-utils": "workspace:*",
-    "@fern-api/ir-generator": "workspace:*",
+    "@fern-api/ir-sdk": "workspace:*",
     "@fern-api/register": "workspace:*",
     "@fern-api/task-context": "workspace:*",
     "@fern-api/workspace-loader": "workspace:*",
