--- a/packages/cli/docs-preview/tsconfig.json
+++ b/packages/cli/docs-preview/tsconfig.json
@@ -5,9 +5,9 @@
   "references": [
     { "path": "../../commons/core-utils" },
     { "path": "../../commons/fs-utils" },
+    { "path": "../../ir-sdk" },
     { "path": "../configuration" },
     { "path": "../docs-resolver" },
-    { "path": "../generation/ir-generator" },
     { "path": "../register" },
     { "path": "../task-context" },
     { "path": "../workspace-loader" }
