--- a/packages/cli/docs-resolver/package.json
+++ b/packages/cli/docs-resolver/package.json
@@ -26,6 +26,21 @@
     "organize-imports": "organize-imports-cli tsconfig.json",
     "depcheck": "depcheck"
   },
+  "dependencies": {
+    "@fern-api/configuration": "workspace:*",
+    "@fern-api/core-utils": "workspace:*",
+    "@fern-api/fdr-sdk": "0.94.3-b6c3996ce",
+    "@fern-api/fs-utils": "workspace:*",
+    "@fern-api/ir-generator": "workspace:*",
+    "@fern-api/ir-sdk": "workspace:*",
+    "@fern-api/task-context": "workspace:*",
+    "@fern-api/workspace-loader": "workspace:*",
+    "gray-matter": "^4.0.3",
+    "lodash-es": "^4.17.21",
+    "mdast-util-from-markdown": "^2.0.0",
+    "unist-util-visit": "^5.0.0",
+    "url-join": "^5.0.0"
+  },
   "devDependencies": {
     "@types/diff": "^5.2.1",
     "@types/jest": "^29.0.3",
@@ -38,18 +53,5 @@
     "organize-imports-cli": "^0.10.0",
     "prettier": "^2.7.1",
     "typescript": "4.6.4"
-  },
-  "dependencies": {
-    "@fern-api/configuration": "workspace:*",
-    "@fern-api/core-utils": "workspace:*",
-    "@fern-api/fdr-sdk": "0.94.3-b6c3996ce",
-    "@fern-api/fs-utils": "workspace:*",
-    "@fern-api/ir-generator": "workspace:*",
-    "@fern-api/ir-sdk": "workspace:*",
-    "@fern-api/task-context": "workspace:*",
-    "@fern-api/workspace-loader": "workspace:*",
-    "gray-matter": "^4.0.3",
-    "lodash-es": "^4.17.21",
-    "url-join": "^5.0.0"
   }
 }
