--- a/packages/cli/docs-resolver/tsconfig.json
+++ b/packages/cli/docs-resolver/tsconfig.json
@@ -1,1 +1,14 @@
-{"extends":"../../../shared/tsconfig.shared.json","compilerOptions":{"composite":true,"outDir":"lib","rootDir":"src"},"include":["./src/**/*"]}
+{
+  "extends": "../../../shared/tsconfig.shared.json",
+  "compilerOptions": { "composite": true, "outDir": "lib", "rootDir": "src" },
+  "include": ["./src/**/*"],
+  "references": [
+    { "path": "../../commons/core-utils" },
+    { "path": "../../commons/fs-utils" },
+    { "path": "../../ir-sdk" },
+    { "path": "../configuration" },
+    { "path": "../generation/ir-generator" },
+    { "path": "../task-context" },
+    { "path": "../workspace-loader" }
+  ]
+}
