--- a/packages/cli/docs-preview/package.json
+++ b/packages/cli/docs-preview/package.json
@@ -35,13 +35,16 @@
     "@fern-api/workspace-loader": "workspace:*",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "lodash-es": "^4.17.21",
     "uuid": "^9.0.1",
+    "watcher": "^2.3.1",
     "ws": "^8.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.0.3",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.7.18",
     "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.10",
