--- a/packages/cli/docs-preview/package.json
+++ b/packages/cli/docs-preview/package.json
@@ -29,13 +29,13 @@
   "dependencies": {
     "@fern-api/docs-resolver": "workspace:*",
     "@fern-api/fdr-sdk": "0.94.3-b6c3996ce",
-    "@fern-api/fs-utils": "workspace:^",
+    "@fern-api/fs-utils": "workspace:*",
     "@fern-api/ir-sdk": "workspace:*",
-    "@fern-api/project-loader": "workspace:^",
+    "@fern-api/project-loader": "workspace:*",
     "@fern-api/register": "workspace:*",
     "@fern-api/task-context": "workspace:*",
     "@fern-api/workspace-loader": "workspace:*",
-    "chalk": "^5.3.0",
+    "chalk": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "lodash-es": "^4.17.21",
