--- a/packages/cli/docs-preview/tsconfig.json
+++ b/packages/cli/docs-preview/tsconfig.json
@@ -3,8 +3,10 @@
   "compilerOptions": { "composite": true, "outDir": "lib", "rootDir": "src" },
   "include": ["./src/**/*"],
   "references": [
+    { "path": "../../commons/fs-utils" },
     { "path": "../../ir-sdk" },
     { "path": "../docs-resolver" },
+    { "path": "../project-loader" },
     { "path": "../register" },
     { "path": "../task-context" },
     { "path": "../workspace-loader" }
