--- a/packages/cli/generation/remote-generation/remote-workspace-runner/package.json
+++ b/packages/cli/generation/remote-generation/remote-workspace-runner/package.json
@@ -43,6 +43,7 @@
     "@fern-api/workspace-loader": "workspace:*",
     "@fern-fern/fiddle-sdk": "^0.0.542",
     "axios": "^0.28.0",
+    "blurhash": "^2.0.5",
     "chalk": "^5.0.1",
     "decompress": "^4.2.1",
     "form-data": "4.0.0",
