--- a/packages/seed/fern/definition/config.yml
+++ b/packages/seed/fern/definition/config.yml
@@ -23,6 +23,10 @@ types:
         docs: | 
           List any fixtures that are okay to fail. For normal fixtures 
           just list the fixture name. For configured fixture list {fixture}:{outputFolder}.
+      featuresConfig:
+        docs: |
+          The relative path to the generator's features.yml configuration.
+        type: optional<string>
       features: optional<features.GeneratorFeatures>
   
   LocalBuildInfo: 
