--- a/generators/go/docker/Dockerfile.sdk
+++ b/generators/go/docker/Dockerfile.sdk
@@ -11,6 +11,9 @@ COPY cmd /workspace/cmd
 COPY internal /workspace/internal
 COPY version.go /workspace/version.go
 
+# Copy the features supported by the generator so it can be extracted.
+COPY sdk/features.yml /fern/features.yml
+
 RUN CGO_ENABLED=0 go build -ldflags "-s -w" -trimpath -buildvcs=false -o /fern-go-sdk ./cmd/fern-go-sdk
 
 ENTRYPOINT ["/fern-go-sdk"]
