--- a/packages/cli/configuration/package.json
+++ b/packages/cli/configuration/package.json
@@ -33,6 +33,7 @@
     "@fern-api/fs-utils": "workspace:*",
     "@fern-api/task-context": "workspace:*",
     "@fern-fern/fiddle-sdk": "^0.0.552",
+    "@fern-fern/generator-cli-sdk": "^0.0.6",
     "dockerode": "^4.0.2",
     "find-up": "^6.3.0",
     "js-yaml": "^4.1.0",
