--- a/packages/cli/generation/local-generation/local-workspace-runner/package.json
+++ b/packages/cli/generation/local-generation/local-workspace-runner/package.json
@@ -32,20 +32,25 @@
     "@fern-api/fs-utils": "workspace:*",
     "@fern-api/ir-generator": "workspace:*",
     "@fern-api/ir-migrations": "workspace:*",
+    "@fern-api/ir-sdk": "workspace:*",
     "@fern-api/logging-execa": "workspace:*",
     "@fern-api/task-context": "workspace:*",
     "@fern-api/workspace-loader": "workspace:*",
     "@fern-fern/fiddle-sdk": "^0.0.552",
-    "@fern-fern/generator-exec-sdk": "^0.0.837",
+    "@fern-fern/generator-cli-sdk": "^0.0.11",
+    "@fern-fern/generator-exec-sdk": "^0.0.873",
     "chalk": "^5.0.1",
     "decompress": "^4.2.1",
-    "tmp-promise": "^3.0.3"
+    "execa": "^5.1.1",
+    "tmp-promise": "^3.0.3",
+    "url-join": "^5.0.0"
   },
   "devDependencies": {
     "@types/decompress": "^4.2.7",
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
     "@types/tmp": "^0.2.4",
+    "@types/url-join": "4.0.1",
     "depcheck": "^1.4.6",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
