--- a/generators/go/internal/generator/sdk/features.yml
+++ b/generators/go/internal/generator/sdk/features.yml
@@ -31,6 +31,10 @@ features:
       As you can see, these request options can either be specified on the client so that
       they're applied on _every_ request or for an individual request.
 
+      > Providing your own `*http.Client` on the client constructor is recommended. Otherwise,
+      > the `http.DefaultClient` is used, and your client will wait indefinitely for a response
+      > (unless the per-request, context-based timeout is used).
+
   - id: ERRORS
     description: |
       Structured error types are returned from API calls that return non-success status codes.
