--- a/test-definitions/fern/apis/extra-properties/definition/user.yml
+++ b/test-definitions/fern/apis/extra-properties/definition/user.yml
@@ -3,6 +3,9 @@ types:
     extra-properties: true
     properties:
       name: string
+    examples:
+      - name: username
+        age: 42
 
 service:
   auth: false
@@ -20,3 +23,13 @@ service:
             _version: literal<"v1">
             name: string
       response: User
+      examples:
+        - request:
+            _type: CreateUserRequest
+            _version: v1
+            name: username
+            age: 42
+          response:
+            body:
+              name: username
+              age: 42
