--- a/packages/cli/openapi-ir-sdk/fern/definition/parseIr.yml
+++ b/packages/cli/openapi-ir-sdk/fern/definition/parseIr.yml
@@ -147,7 +147,7 @@ types:
     extends: commons.WithDescription
     properties:
       name: optional<string>
-      payload: SchemaWithExample
+      payload: finalIr.FernExample
 
   SchemaWithExample:
     union:
