--- a/packages/cli/openapi-ir-sdk/fern/definition/parseIr.yml
+++ b/packages/cli/openapi-ir-sdk/fern/definition/parseIr.yml
@@ -4,7 +4,9 @@ imports:
 
 types:
   NamedFullExample:
-    extends: commons.WithDescription
+    extends:
+      - commons.WithDescription
+      - commons.WithSource
     properties:
       name: optional<string>
       value: unknown
@@ -18,6 +20,7 @@ types:
     extends: 
       - commons.WithDescription
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       authed: boolean
       internal: optional<boolean>
@@ -63,6 +66,7 @@ types:
     extends:
       - commons.WithDescription
       - commons.WithName
+      - commons.WithSource
     properties:
       statusCode: commons.StatusCode
       schema: SchemaWithExample
@@ -75,7 +79,9 @@ types:
       json: JsonRequestWithExample
 
   JsonRequestWithExample:
-    extends: commons.WithDescription
+    extends:
+      - commons.WithDescription
+      - commons.WithSource
     properties:
       schema: SchemaWithExample
       contentType: optional<string>
@@ -94,7 +100,9 @@ types:
         docs: Checks if `x-fern-streaming` is present and is true.
 
   JsonResponseWithExample:
-    extends: commons.WithDescription
+    extends:
+      - commons.WithDescription
+      - commons.WithSource
     properties:
       schema: SchemaWithExample
       responseProperty: optional<string>
@@ -104,6 +112,7 @@ types:
     extends: 
       - commons.WithDescription
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       name: string
       schema: SchemaWithExample
@@ -113,6 +122,7 @@ types:
     extends: 
       - commons.WithDescription
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       name: string
       schema: SchemaWithExample
@@ -126,6 +136,7 @@ types:
     extends: 
       - commons.WithDescription
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       name: string
       schema: SchemaWithExample
@@ -155,6 +166,7 @@ types:
       - commons.WithName
       - commons.WithDescription
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       value: SchemaWithExample
       example: optional<list<unknown>>
@@ -165,6 +177,7 @@ types:
       - commons.WithName
       - commons.WithDescription
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       key: PrimitiveSchemaWithExample
       value: SchemaWithExample
@@ -176,6 +189,7 @@ types:
       - commons.WithName
       - commons.WithDescription
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       value: SchemaWithExample
 
@@ -185,6 +199,7 @@ types:
       - commons.WithName
       - commons.WithDescription
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       value: SchemaWithExample
 
@@ -194,6 +209,7 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       default: optional<finalIr.EnumValue>
       values: list<finalIr.EnumValue>
@@ -205,6 +221,7 @@ types:
       - commons.WithName
       - commons.WithDescription
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       example: unknown
 
@@ -214,6 +231,7 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       allOf: list<finalIr.ReferencedSchema>
       properties: list<ObjectPropertyWithExample>
@@ -251,6 +269,7 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       discriminantProperty: string
       commonProperties: list<CommonPropertyWithExample>
