--- a/packages/cli/openapi-ir-sdk/fern/definition/finalIr.yml
+++ b/packages/cli/openapi-ir-sdk/fern/definition/finalIr.yml
@@ -62,12 +62,15 @@ types:
     extends:
       - commons.WithDescription
       - commons.WithName
+      - commons.WithSource
     properties:
       schema: optional<Schema>
       examples: optional<list<ErrorExample>>
 
   Webhook:
-    extends: commons.WithDescription
+    extends:
+      - commons.WithDescription
+      - commons.WithSource
     properties:
       sdkName: optional<EndpointSdkName>
       method: WebhookHttpMethod
@@ -89,7 +92,9 @@ types:
       payload: example.FullExample
 
   WebsocketChannel:
-    extends: commons.WithDescription
+    extends:
+      - commons.WithDescription
+      - commons.WithSource
     properties:
       path: string
       groupName: commons.SdkGroupName
@@ -136,7 +141,9 @@ types:
     extends: 
       - commons.WithDescription
       - commons.WithAvailability
+      - commons.WithSource
     properties:
+      source:
       authed: boolean
       internal: optional<boolean>
       idempotent: optional<boolean>
@@ -309,6 +316,7 @@ types:
     extends: 
       - commons.WithDescription
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       name: string
       schema: Schema
@@ -318,6 +326,7 @@ types:
     extends: 
       - commons.WithDescription
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       name: string
       schema: Schema
@@ -330,6 +339,7 @@ types:
     extends: 
       - commons.WithDescription
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       name: string
       schema: Schema
@@ -346,18 +356,24 @@ types:
       json: JsonRequest
 
   OctetStreamRequest:
-    extends: commons.WithDescription
+    extends:
+      - commons.WithDescription
+      - commons.WithSource
     properties: {}
 
   JsonRequest:
-    extends: commons.WithDescription
+    extends:
+      - commons.WithDescription
+      - commons.WithSource
     properties:
       schema: Schema
       contentType: optional<string>
       additionalProperties: boolean
 
   MultipartRequest:
-    extends: commons.WithDescription
+    extends:
+      - commons.WithDescription
+      - commons.WithSource
     properties:
       name:
         type: optional<string>
@@ -392,13 +408,19 @@ types:
         docs: Checks if `x-fern-streaming` is present and is true.
 
   FileResponse:
-    extends: commons.WithDescription
+    extends:
+      - commons.WithDescription
+      - commons.WithSource
 
   TextResponse:
-    extends: commons.WithDescription
+    extends:
+      - commons.WithDescription
+      - commons.WithSource
 
   JsonResponse:
-    extends: commons.WithDescription
+    extends:
+      - commons.WithDescription
+      - commons.WithSource
     properties:
       schema: Schema
       responseProperty: optional<string>
@@ -423,6 +445,7 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       schema: PrimitiveSchemaValue
 
@@ -499,6 +522,7 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       value: LiteralSchemaValue
 
@@ -513,6 +537,7 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       allOf: list<ReferencedSchema>
       properties: list<ObjectProperty>
@@ -561,6 +586,7 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       value: Schema
 
@@ -570,6 +596,7 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       key: PrimitiveSchema
       value: Schema
@@ -580,6 +607,7 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       value: Schema
 
@@ -589,6 +617,7 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       value: Schema
 
@@ -598,6 +627,7 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       default: optional<EnumValue>
       values: list<EnumValue>
@@ -606,6 +636,7 @@ types:
     extends:
       - commons.WithDescription
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       nameOverride:
         type: optional<string>
@@ -631,6 +662,7 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       schema: commons.SchemaId
 
@@ -645,6 +677,7 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       discriminantProperty: string
       commonProperties: list<CommonProperty>
@@ -661,5 +694,6 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       schemas: list<Schema>
