--- a/packages/ir-sdk/fern/apis/ir-types-latest/generators.yml
+++ b/packages/ir-sdk/fern/apis/ir-types-latest/generators.yml
@@ -36,7 +36,7 @@ groups:
   python: 
     generators:
       - name: fernapi/fern-pydantic-model
-        version: 1.1.0-rc0
+        version: 1.3.1
         output:
           location: pypi
           url: pypi.buildwithfern.com
