Add another source node

--- a/packages/cli/openapi-ir-sdk/fern/definition/parseIr.yml
+++ b/packages/cli/openapi-ir-sdk/fern/definition/parseIr.yml
@@ -280,6 +280,7 @@ types:
       - commons.WithName
       - commons.WithSdkGroupName
       - commons.WithAvailability
+      - commons.WithSource
     properties:
       schemas: list<SchemaWithExample>
 
