--- a/generators/typescript/utils/commons/package.json
+++ b/generators/typescript/utils/commons/package.json
@@ -35,8 +35,7 @@
     "@fern-typescript/zurg": "workspace:*",
     "decompress": "^4.2.1",
     "esutils": "^2.0.3",
-    "glob": "^8.0.3",
-    "glob-promise": "^5.0.0",
+    "glob": "^11.0.0",
     "immer": "^9.0.15",
     "js-yaml": "^4.1.0",
     "lodash-es": "^4.17.21",
@@ -48,6 +47,7 @@
   "devDependencies": {
     "@types/decompress": "^4.2.7",
     "@types/esutils": "^2.0.0",
+    "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.8",
     "@types/lodash-es": "^4.17.12",
@@ -56,10 +56,10 @@
     "depcheck": "^1.4.6",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.4",
     "memfs": "^3.4.1",
     "organize-imports-cli": "^0.10.0",
     "package-json-type": "^1.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "ts-jest": "^29.2.4"
   }
 }
