--- a/packages/cli/yaml/yaml-migrations/package.json
+++ b/packages/cli/yaml/yaml-migrations/package.json
@@ -36,14 +36,14 @@
     "@fern-fern/legacy-docs-config": "0.0.58",
     "chalk": "^5.3.0",
     "find-up": "^6.3.0",
-    "glob": "^8.0.3",
-    "glob-promise": "^5.0.0",
+    "glob": "^11.0.0",
     "inquirer": "^9.2.23",
     "js-yaml": "^4.1.0",
     "yaml": "^2.4.5",
     "zod": "^3.22.3"
   },
   "devDependencies": {
+    "@types/glob": "^8.1.0",
     "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.8",
