--- a/test-definitions/fern/apis/grpc-proto-exhaustive/overrides.yml
+++ b/test-definitions/fern/apis/grpc-proto-exhaustive/overrides.yml
@@ -1,3 +1,10 @@
+
+paths:
+  /data/fetch:
+      x-fern-request-name: FetchRequest
+  /data/list:
+    get:
+      x-fern-request-name: ListRequest
 components:
   schemas:
     Metadata:
@@ -30,7 +37,7 @@ components:
       properties:
         filter:
           $ref: '#/components/schemas/Metadata'
-    QueryVector:
+    QueryColumn:
       properties:
         filter:
           $ref: '#/components/schemas/Metadata'
