--- a/.github/workflows/validate-changelog.yml
+++ b/.github/workflows/validate-changelog.yml
@@ -31,7 +31,20 @@ jobs:
   generator-validate:
     strategy:
       matrix:
-        generator: [fastapi, pydantic, python-sdk, go-sdk, ruby-sdk, postman, openapi]
+        generator:
+          [
+            fastapi,
+            pydantic,
+            python-sdk,
+            go-sdk,
+            ruby-sdk,
+            postman,
+            openapi,
+            java-sdk,
+            java-model,
+            java-spring,
+            ts-express
+          ]
 
     runs-on: ubuntu-latest
     steps:
