--- a/seed/openapi/examples/.mock/definition/types.yml
+++ b/seed/openapi/examples/.mock/definition/types.yml
@@ -106,6 +106,7 @@ types:
             ratings:
               rottenTomatoes: 97
               imdb: 7.6
+          revenue: 1000000
 
   Moment:
     properties:
