--- a/generators/typescript/sdk/cli/node-docker/Dockerfile
+++ b/generators/typescript/sdk/cli/node-docker/Dockerfile
@@ -44,8 +44,8 @@ RUN  yarn add \
   ts-loader@9.3.1 \
   webpack@5.94.0 \
   # fetch mock jest
-  fetch-mock-jest@1.5.1 
-RUN yarn add ioredis@5.4.1 @types/ioredis@5.0.0
+  fetch-mock-jest@1.5.1
+RUN yarn install
 
 COPY generators/typescript/utils/core-utilities/fetcher/src/ /assets/fetcher
 COPY generators/typescript/utils/core-utilities/callback-queue/src/ /assets/callback-queue
