--- a/packages/commons/core-utils/package.json
+++ b/packages/commons/core-utils/package.json
@@ -27,18 +27,20 @@
     "depcheck": "depcheck"
   },
   "dependencies": {
-    "strip-ansi": "^7.1.0",
-    "ua-parser-js": "^1.0.37",
-    "whatwg-mimetype": "^4.0.0",
     "lodash-es": "^4.17.21",
-    "title": "^3.5.3"
+    "strip-ansi": "^7.1.0",
+    "title": "^3.5.3",
+    "ua-parser-js": "^1.0.37",
+    "uuid": "^9.0.1",
+    "whatwg-mimetype": "^4.0.0"
   },
   "devDependencies": {
-    "@types/title": "^3.4.3",
-    "@types/lodash-es": "^4.17.12",
     "@types/lodash": "^4.17.4",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.7.18",
+    "@types/title": "^3.4.3",
     "@types/ua-parser-js": "^0.7.39",
+    "@types/uuid": "^9.0.8",
     "@types/whatwg-mimetype": "^3.0.2",
     "depcheck": "^1.4.6",
     "eslint": "^8.56.0",
