set content types

--- a/packages/cli/api-importers/openapi/openapi-ir/fern/definition/commons.yml
+++ b/packages/cli/api-importers/openapi/openapi-ir/fern/definition/commons.yml
@@ -21,6 +21,10 @@ types:
   WithAvailability:
     properties:
       availability: optional<finalIr.Availability>
+  
+  WithContentType:
+    properties:
+      contentType: optional<string>
 
   WithName:
     properties:
